--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,44 @@
-singularity_neuroglia: /project/6050199/akhanf/singularity/bids-apps/khanlab_neuroglia-core_latest.sif
-#singularity_neuroglia: docker://khanlab/neuroglia-core:latest
+singularity:
+    neuroglia: /project/6050199/akhanf/singularity/bids-apps/khanlab_neuroglia-core_latest.sif
+    ants: /project/6050199/akhanf/singularity/ants-v2.3.1.sif
+# use this URI if not on khanlab compute canada:
+#    neuroglia: docker://khanlab/neuroglia-core:latest
 
-in_bids: /path/to/bids_folder
-in_other: /path/to/some/other/input_data/sub-{subject}
+subject_t1w: /project/6050199/akhanf/cfmm-bids/data/Khan/epi_iEEG/mri/bids_defaced/sub-{subject}/ses-001/anat/sub-{subject}_ses-001_run-01_T1w_defaced.nii.gz
+
+#use this if a particular subject has a custom path
+subject_t1w_custom:
+    'P029': /project/6050199/akhanf/cfmm-bids/data/Khan/epi_iEEG/mri/bids_defaced/sub-{subject}/ses-001/anat/sub-{subject}_ses-001_acq-FSPGR_run-01_T1w_defaced.nii.gz
+
+
+
+template_t1w: resources/tpl-{template}_res-01_T1w.nii.gz
+template_mask: resources/tpl-{template}_res-01_desc-brain_mask.nii.gz 
+templates: 
+ - MNI152NLin6Asym
+
+subject_electrodes: /project/6050199/akhanf/cfmm-bids/data/Khan/epi_iEEG/for_bmi/imaging/deriv/seeg_coordinates/sub-{subject}/channel_files/sub-{subject}_ses-001_electrodes.tsv
+
+#some naming errors in input files:
+subject_electrodes_custom:
+    'P025': /project/6050199/akhanf/cfmm-bids/data/Khan/epi_iEEG/for_bmi/imaging/deriv/seeg_coordinates/sub-{subject}/channel_files/sub-025_ses-001_electrodes.tsv
+
+ants:
+    dim: 3
+    random_seed: 42 #requires ants version at least 2.3.1 (includes --random-seed option)
+    intensity_opts: '-u 1 -w [0.01,0.99] -z 1'
+    linear:
+        reg_iterations: '1000x500x250x0'
+        shrink_factors: '6x4x2x1'
+        smoothing_factors: '4x2x1x0'
+    deform:
+        shrink_factors: '12x6x4x2x1'  # default in antsMVTC2: 6x4x2x1 
+        smoothing_factors: '6x3x2x1x0vox' # default in antsMVTC2: 3x2x1x0 
+        reg_iterations: '100x100x70x50x10' # default in antsMVTC2: 100x100x70x20 
+        transform_model: 'SyN[0.1,3,0]'
+        sim_metric: CC
+    shape_update:
+        gradient_step: 0.25
+
 
 participants_tsv: config/participants.tsv
