added vis_regqc, some other things in progress

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,8 +19,8 @@ include: 'rules/common.smk'
 rule all:
     input:
         warped_flo = expand(bids(root='results',suffix='T1w.nii.gz',space='{template}',desc='SyN',subject='{subject}'),subject=subjects,template=config['templates']),
-        done = expand(bids(root='results',subject='{subject}',desc='n4',suffix='T1w_fast.done'),subject=subjects)
-        # The first rule should define the default target files
+#        done = expand(bids(root='results',subject='{subject}',desc='n4',suffix='T1w_fast.done'),subject=subjects),
+        png = expand(bids(root='qc',subject='{subject}',suffix='regqc.png',from_='subject', to='{template}',desc='{desc}'),subject=subjects, desc=['rigid','affine','SyN'],template=config['templates'])
         # Subsequent target rules can be specified below. They should start with all_*.
 
 
