--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,13 +21,15 @@ rule all:
         tsv = expand(bids(root='results',subject='{subject}',suffix='electrodes.tsv',desc='{atlas}',from_='{template}'),
                 subject=subjects,atlas=config['atlases'],template=config['templates']),
         reg_vis = expand(bids(root='qc',subject='{subject}',suffix='regqc.png',from_='subject', to='{template}',desc='{desc}'),
-                subject=subjects, desc=['rigid','affine','SyN'],template=config['templates']),
+                subject=subjects, desc=['affine','SyN'],template=config['templates']),
         electrode_vis = expand(bids(root='qc',subject='{subject}',suffix='electrodevis.png',desc='{desc}',space='{template}'),
-                subject=subjects, desc=['rigid','affine'],template=config['templates']),
+                subject=subjects, desc=['affine'],template=config['templates']),
         probseg_vis = expand(bids(root='qc',subject='{subject}',suffix='probseg.png',label='{tissue}', from_='{template}'),
                 subject=subjects, tissue=config['tissue_labels'],template=config['templates']),
-              
+        atlas_vis = expand(bids(root='qc',subject='{subject}',suffix='dseg.png',atlas='{atlas}', from_='{template}'),
+                subject=subjects, atlas=config['atlases'],template=config['templates']),
+             
 
-
-
-include: "rules/atlas_reg.smk"
+include: "rules/registration.smk"
+include: "rules/electrodes.smk"
+include: "rules/visqc.smk"
